[package]
name = "ipld-collections"
version = "0.1.1"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "multiblock ipld collections"
repository = "https://github.com/ipfs-rust/rust-ipld-collections"

[dependencies]
libipld = { version = "0.4.0", default-features = false, features = ["dag-cbor", "derive"] }

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
criterion = "0.3.2"
model = "0.1.2"
tempdir = "0.3.7"

[[bench]]
name = "list"
harness = false

#[[bench]]
#name = "map"
#harness = false

[profile.release]
debug = true
