[package]
name = "libipld-collections"
version = "0.3.0"
authors = ["David Craven <david@craven.ch>", "Daniel Craven <daniel@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "multiblock ipld collections"
repository = "https://github.com/ipfs-rust/rust-ipld-collections"

[dependencies]
futures = "0.3.8"
libipld = { version = "0.9.0", default-features = false, features = ["dag-cbor", "derive"] }
multihash = { version = "0.13.2", default-features = false, features = ["sha2"] }

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
criterion = "0.3.3"
model = "0.1.2"
multihash = { version = "0.13.2", default-features = false, features = ["blake2b"] }
tempdir = "0.3.7"
proptest = "0.10.1"

[[bench]]
name = "list"
harness = false

#[[bench]]
#name = "map"
#harness = false

[profile.release]
debug = true

[patch.crates-io]
libipld = { path = "../libipld" }
